datasource db {
    provider = "postgresql"
    url      = env("DATABASE_URL")
}

generator client {
    provider        = "prisma-client-js"
    previewFeatures = ["jsonProtocol"]
}

generator zod {
    provider                         = "zod-prisma-types"
    output                           = "../zod"
    useMultipleFiles                 = false // default: false
    createInputTypes                 = true // default: true
    createModelTypes                 = true // default: true
    addInputTypeValidation           = true // default: true
    addIncludeType                   = true // default: true
    addSelectType                    = true // default: true
    validateWhereUniqueInput         = false // default: false
    createOptionalDefaultValuesTypes = false // default: false
    createRelationValuesTypes        = false // default: false
    createPartialTypes               = false // default: false
    useDefaultValidators             = true // default: true
    coerceDate                       = true // default: true
    writeNullishInModelTypes         = false // default: false
}

generator dbml {
    provider = "prisma-dbml-generator"
}

// Attributes
model ExpiryDate {
    id       String         @id @default(cuid())
    type     ExpiryType     @default(EXPIRATION_DATE)
    dateType ExpiryDateType @default(SPECIFIC_DATE)
    date     DateTime       @db.Date

    skus Sku[]

    updatedAt DateTime @updatedAt
    createdAt DateTime @default(now())

    @@unique([type, dateType, date])
}

// Pure Jan
model Jan {
    code String @id @db.VarChar(14)

    products Product[]

    updatedAt DateTime @updatedAt
    createdAt DateTime @default(now())

    @@unique([code])
}

// Master
model JanSite {
    id    String @id @default(cuid())
    title String

    Product Product[]

    updatedAt DateTime @updatedAt
    createdAt DateTime @default(now())

    @@unique([id])
}

model Note {
    id      String @id @default(cuid())
    content String

    updatedAt DateTime @updatedAt
    createdAt DateTime @default(now())

    user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
    userId    String
    Product   Product? @relation(fields: [productId], references: [id])
    productId String?

    @@unique([id])
    @@index([userId])
}

model Product {
    id    String  @id @default(cuid())
    title String
    image String?

    janCode    String   @db.VarChar(14)
    jan        Jan      @relation(fields: [janCode], references: [code], onDelete: Cascade)
    categoryId String
    category   Category @relation(fields: [categoryId], references: [id], onDelete: Cascade)
    janSiteId  String?
    janSite    JanSite? @relation(fields: [janSiteId], references: [id])

    skus  Sku[]
    tags  Tag[]
    notes Note[]

    updatedAt DateTime @updatedAt
    createdAt DateTime @default(now())

    @@unique([title, janCode, janSiteId])
    @@index([title])
}

// Product x ExpiryDate (or else attributes) -> Sku
model Sku {
    id String @id @default(cuid())

    // attributes
    expiryDateId String?
    expiryDate   ExpiryDate? @relation(fields: [expiryDateId], references: [id], onDelete: Cascade)
    productId    String      @db.VarChar(14)
    product      Product     @relation(fields: [productId], references: [id])

    stocks Stock[]

    updatedAt DateTime @updatedAt
    createdAt DateTime @default(now())

    @@unique([expiryDateId, productId])
}

// Sku quantity, generally one to one sku
model Stock {
    id          String  @id @default(cuid())
    description String?
    quantity    Int     @default(0) @db.Integer

    userId  String
    user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)
    skuId   String
    sku     Sku     @relation(fields: [skuId], references: [id])
    groupId String?
    group   Group?  @relation(fields: [groupId], references: [id])

    updatedAt DateTime @updatedAt
    createdAt DateTime @default(now())

    @@unique([skuId, groupId, userId])
    @@index([userId])
}

// Like folder stock management
model Group {
    id   String  @id @default(cuid())
    name String? @db.Text

    user    User    @relation(fields: [userId], references: [id])
    userId  String
    group   Group?  @relation("GroupToGroup", fields: [groupId], references: [id])
    groupId String?

    groups Group[] @relation("GroupToGroup")
    stocks Stock[]

    updatedAt DateTime @updatedAt
    createdAt DateTime @default(now())

    @@unique([name, userId, groupId])
    @@index([name, userId])
}

// For all user search product, possible add by user
model Category {
    id   String @id @default(cuid())
    name String @db.Text

    user   User?   @relation(fields: [userId], references: [id], onDelete: Cascade)
    userId String?

    products Product[]

    updatedAt DateTime @updatedAt
    createdAt DateTime @default(now())

    @@unique([name, userId])
    @@index([name, userId])
}

model Tag {
    id   String @id @default(cuid())
    name String @db.Text

    user   User   @relation(fields: [userId], references: [id])
    userId String

    products Product[]

    updatedAt DateTime @updatedAt
    createdAt DateTime @default(now())

    @@unique([name, userId])
    @@index([name, userId])
}

enum ExpiryDateType {
    SPECIFIC_DATE
    DURING_THE_MONTH
    DURING_THE_YEAR
}

enum ExpiryType {
    EXPIRATION_DATE
    BEST_BEFORE_DATE
}

// model Company {
//     id      String @id @default(cuid())
//     code    String @db.VarChar(10) @unique
//     name    String? @db.Text
// }

// model Country {
//     id        String   @id @default(cuid())
//     code      String   @unique @db.VarChar(2)
//     name      String
//     updatedAt DateTime @updatedAt
//     createdAt DateTime @default(now())
// }

// model Site {
//     id        String   @id @default(cuid())
//     name      String
//     updatedAt DateTime @updatedAt
//     createdAt DateTime @default(now())
// }

// NextAuth.js Models
// NOTE: When using postgresql, mysql or sqlserver,
// uncomment the @db.Text annotations below
// @see https://next-auth.js.org/schemas/models
model Account {
    id                String  @id @default(cuid())
    userId            String
    type              String
    provider          String
    providerAccountId String
    refresh_token     String? @db.Text
    access_token      String? @db.Text
    expires_at        Int?
    token_type        String?
    scope             String?
    id_token          String? @db.Text
    session_state     String?

    user User @relation(fields: [userId], references: [id], onDelete: Cascade)

    @@unique([provider, providerAccountId])
    @@index([userId])
}

model Session {
    id           String   @id @default(cuid())
    sessionToken String
    expires      DateTime

    userId String
    user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

    @@unique([sessionToken])
    @@index([userId])
}

model User {
    id            String    @id @default(cuid())
    name          String?
    email         String?
    emailVerified DateTime?
    image         String?

    accounts   Account[]
    sessions   Session[]
    stocks     Stock[]
    groups     Group[]
    tags       Tag[]
    categories Category[]
    Note       Note[]

    @@unique([email])
    @@index([name, email])
}

model VerificationToken {
    identifier String
    token      String   @unique
    expires    DateTime

    @@unique([identifier, token])
}
