//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table ExpiryDate {
  id String [pk]
  type ExpiryType [not null]
  year Int [not null]
  month Int
  day Int
  skus Sku [not null]
  updatedAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]

  indexes {
    (type, year, month, day) [unique]
  }
}

Table Jan {
  code String [pk]
  products Product [not null]
  updatedAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
}

Table JanSite {
  id String [pk]
  title String [not null]
  products Product [not null]
  updatedAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
}

Table Note {
  id String [pk]
  content String [not null]
  updatedAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  user User [not null]
  userId String [not null]
  Product Product
  productId String
}

Table Product {
  id String [pk]
  title String [not null]
  image String
  janCode String
  jan Jan
  janSiteId String
  janSite JanSite
  skus Sku [not null]
  productTags ProductTag [not null]
  categories Category [not null]
  notes Note [not null]
  updatedAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]

  indexes {
    (title, janCode) [unique]
  }
}

Table Sku {
  id String [pk]
  expiryDateId String
  expiryDate ExpiryDate
  productId String [not null]
  product Product [not null]
  stocks Stock [not null]
  updatedAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]

  indexes {
    (expiryDateId, productId) [unique]
  }
}

Table Stock {
  id String [pk]
  description String
  quantity Int [not null, default: 0]
  userId String [not null]
  user User [not null]
  skuId String [not null]
  sku Sku [not null]
  groupId String
  group Group
  stockTags StockTag [not null]
  updatedAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]

  indexes {
    (skuId, groupId, userId) [unique]
  }
}

Table Group {
  id String [pk]
  name String
  user User [not null]
  userId String [not null]
  group Group
  groupId String
  groups Group [not null]
  stocks Stock [not null]
  updatedAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]

  indexes {
    (name, userId, groupId) [unique]
  }
}

Table Category {
  id String [pk]
  name String [not null]
  user User
  userId String
  products Product [not null]
  updatedAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]

  indexes {
    (name, userId) [unique]
  }
}

Table ProductTag {
  id String [pk]
  name String [not null]
  user User [not null]
  userId String [not null]
  products Product [not null]
  updatedAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]

  indexes {
    (name, userId) [unique]
  }
}

Table StockTag {
  id String [pk]
  name String [not null]
  user User [not null]
  userId String [not null]
  stocks Stock [not null]
  updatedAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]

  indexes {
    (name, userId) [unique]
  }
}

Table Account {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table Session {
  id String [pk]
  sessionToken String [unique, not null]
  expires DateTime [not null]
  userId String [not null]
  user User [not null]
}

Table User {
  id String [pk]
  name String
  email String [unique]
  emailVerified DateTime
  image String
  accounts Account [not null]
  sessions Session [not null]
  stocks Stock [not null]
  groups Group [not null]
  productTags ProductTag [not null]
  stockTags StockTag [not null]
  categories Category [not null]
  notes Note [not null]
}

Table VerificationToken {
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Enum ExpiryType {
  EXPIRATION_DATE
  BEST_BEFORE_DATE
  MANUAL_DATE
}

Ref: Note.userId > User.id [delete: Cascade]

Ref: Note.productId > Product.id

Ref: Product.janCode > Jan.code [delete: Cascade]

Ref: Product.janSiteId > JanSite.id

Ref: Sku.expiryDateId > ExpiryDate.id

Ref: Sku.productId > Product.id

Ref: Stock.userId > User.id [delete: Cascade]

Ref: Stock.skuId > Sku.id [delete: Cascade]

Ref: Stock.groupId > Group.id

Ref: Group.userId > User.id

Ref: Group.groupId - Group.id [delete: Cascade]

Ref: Category.userId > User.id [delete: Cascade]

Ref: ProductTag.userId > User.id [delete: Cascade]

Ref: StockTag.userId > User.id [delete: Cascade]

Ref: Account.userId > User.id [delete: Cascade]

Ref: Session.userId > User.id [delete: Cascade]